fix overflowing text fields on site page

--- a/app/stylesheets/_forms.less
+++ b/app/stylesheets/_forms.less
@@ -3,6 +3,10 @@
 #canvas {
   form {
     input, textarea, select { font-size: 1.2em; }
+    
+    input.copy {
+      width: 100%;
+    }
   }
   
   form.form {
